# CircuitPython_remoc

./: LICENSE  README.md  README.md.license  pyproject.toml  remoc.py  requirements.txt
.github/workflows/: release_gh.yml  release_pypi.yml
LICENSES/: MIT.txt
examples/: remoc_simpletest.py
remoc/: __init__.py  bleservice.py  dispatcher.py  globals.py  httpservice.py  logger.py  remoc.py
