# SPDX-FileCopyrightText: 2022 Alec Delaney, written for Adafruit Industries
# SPDX-FileCopyrightText: Copyright (c) 2025 Jean Serrano
#
# SPDX-License-Identifier: MIT

[build-system]
requires = [
    "setuptools",
    "wheel",
    "setuptools-scm",
]

[project]
name = "circuitpython-remoc"
description = "Remote function control over BLE and Wi-Fi for CircuitPython devices, using JSON commands and function decorators."
version = "0.0.0+auto.0"
readme = "README.rst"
authors = [
    {name = "Jean Serrano", email = "yeanse@aol.com"}
]
urls = {Homepage = "https://github.com/ourpxi/CircuitPython_remoc"}
keywords = [
    "adafruit",
    "blinka",
    "circuitpython",
    "micropython",
    "remoc",
    "remoc,",
    "remote",
    "control,",
    "circuitpython,",
    "esp32,",
    "wifi,",
    "bluetooth,",
    "ble,",
    "ble",
    "uart,",
    "http",
    "server,",
    "iot,",
    "microcontroller,",
    "json",
    "protocol,",
    "command",
    "execution,",
    "remote",
    "functions,",
    "function",
    "dispatcher,",
    "embedded",
    "systems,",
    "python,",
    "esp32-wroom,",
    "automation,",
    "device",
    "control,",
    "library,",
    "ideaboard",
]
license = {text = "MIT"}
classifiers = [
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Libraries",
    "Topic :: Software Development :: Embedded Systems",
    "Topic :: System :: Hardware",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
]
dynamic = ["dependencies", "optional-dependencies"]

[tool.setuptools]
# TODO: IF LIBRARY FILES ARE A PACKAGE FOLDER,
#       CHANGE `py_modules = ['...']` TO `packages = ['...']`
py-modules = ["remoc"]

[tool.setuptools.dynamic]
dependencies = {file = ["requirements.txt"]}
optional-dependencies = {optional = {file = ["optional_requirements.txt"]}}
